Version 3.8.1

  - Fix E'' string escape handling on architectures with unsigned chars
    [Github issue #46]
  - ShowErrorStatement works for "quickexec" do() calls (RT #120268 and Github #44)

Version 3.8.0, released April 25, 2019

  - Increase minimum supported PostgreSQL version to 8.0
    [Dagfinn Ilmari Mannsåker]

  - Add support for foreign tables in table_info() and column_info()
    [Dagfinn Ilmari Mannsåker]

  - Return the current database name as TABLE_CAT in info methods
    [Dagfinn Ilmari Mannsåker]

  - Handle backslash-escaped quotes in E'' strings
    [Dagfinn Ilmari Mannsåker]

  - Fix typo in Makefile.PL
    [CPAN ticket #127097]

  - Fix parsing of PostgreSQL versions >= 10 on Debian/Ubuntu
    [Dagfinn Ilmari Mannsåker]

  - Fix client_min_messages=FATAL test when PostgreSQL caps it to ERROR
    [Dagfinn Ilmari Mannsåker]
    [CPAN ticket #128529]

  - Fix ->ping error detection on PostgreSQL 12
    [Dagfinn Ilmari Mannsåker]

  - Adjust tests for new pg_ctl output
    [Erik Rijkers    er at xs4all.nl]
    [CPAN ticket #128966]

  - Adjust tests for removal of WITH OIDS in PostgreSQL 12
    [Dagfinn Ilmari Mannsåker]

  - Fix support for PostgreSQL versions back to 8.0
    [Dagfinn Ilmari Mannsåker]

  - Remove usage of deprecated pg_attrdef.adsrc and pg_constraint.consrc columns
    [Dagfinn Ilmari Mannsåker]

  - Fix typo in pg_placeholder_colons example
    (Github issue #41)

  - Support GENERATED ... AS IDENTITY columns in last_insert_id()
    [Dagfinn Ilmari Mannsåker]


Version 3.7.4. Released February 12, 2018 (git tag 3.7.4)

  - Fix typo in META.yml
    [CPAN ticket #124405]


Version 3.7.3. Released February 12, 2018 (git tag 3.7.3)

  - Test tweak so we don't try to use jsonb on older versions.
    [CPAN ticket #124934]


Version 3.7.2  Released February 11, 2018 (git tag 3.7.2)

  - Remove Data::Peek dependency accidentally left in t/12placeholders.t
    [CPAN ticket #124393]

